Добавил вывод общих с другом фильмов с сортировкой по их популярности. Исправил косяк с genres